# vaultappsegura

./: .gitignore  .tar_exclude.txt  package.json
.github/workflows/: pages.yml  release.yml
app/: LEEME_PRIMERO.txt  README_FIRST.txt  SHA256SUMS.txt  hashes.txt  index.html  install_linux.sh  package.json  pad.js  vite.config.ts
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  err.txt  installer_hooks.nsh  principles_es.txt  tauri.conf.json
app/src-tauri/binaries/: tor-x86_64-unknown-linux-gnu
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: crypto.rs  db.rs  lib.rs
app/src/components/: ChannelChat.tsx  DirectMessageChat.css  DirectMessageChat.tsx  DirectoryBoard.tsx  GroupsBoard.tsx  Icons.tsx  MessageRenderer.tsx  ReportBoard.css  ReportBoard.tsx  SearchBoard.tsx  SettingsPanel.css  SettingsPanel.tsx
app/src/i18n/: LanguageContext.tsx  ar.ts  bn.ts  de.ts  en.ts  es.ts  fa.ts  fr.ts  he.ts  hi.ts  ja.ts  locales.ts  pt.ts  ru.ts  types.ts  zh.ts
portal/: index-ar.html  index-de.html  index-es.html  index-fr.html  index-it.html  index-ja.html  index-ko.html  index-pt.html  index-ru.html  index-tr.html  index-zh.html  index.html  style.css
