[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "io-util", "net"] }
nostr-sdk = { version = "0.44.1", default-features = false, features = ["all-nips"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls-webpki-roots", "socks"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
image = "0.24"
rusqlite = { version = "0.31.0", features = ["bundled"] }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
hex = "0.4.3"
lopdf = "0.39.0"
lofty = "0.23.2"
lazy_static = "1.5.0"
tor-rtcompat = "0.22.0"
arti-client = { version = "0.22.0", default-features = false, features = ["tokio", "rustls"] }
[features]
default = []
vendored-openssl = ["openssl"]
